...
                                        <accessibility key="accessibilityConfiguration" identifier="email-field"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jKU-h6-wng">
                                        <rect key="frame" x="0.0" y="50" width="318" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="password-field"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="Tpc-bj-Fdf"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                </subviews>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fy6-f7-iB4">
                                <rect key="frame" x="168.5" y="470" width="77" height="36"/>
                                <accessibility key="accessibilityConfiguration" identifier="submit"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title=" Submit  "/>
                                <connections>
                                    <action selector="login" destination="LYq-WR-wIg" eventType="touchUpInside" id="NnE-BP-UHR"/>
                                </connections>
                            </button>
...
