//
//  MobileTestPRUITests.swift
//  MobileTestPRUITests
//
//  Created by Derek Bronston on 12/18/18.
//  Copyright © 2018 Freshly. All rights reserved.
//

import XCTest
//import OHHTTPStubs

class MobileTestPRUITests: XCTestCase {

    override func setUp() {
        super.setUp()
    }

    override func tearDown() {
    }
    
    //MOB-2161
    func testGivenTheUsersEmailAndPasswordAreEnteredIntoTheLoginFieldsWhenTheUserTapsSubmitAndTheRequestSucceedsThenDisplayHome(){
    
        let app = XCUIApplication()
        app.launchArguments = ["ui-tests","login-success","{\"success\":true}"]
        app.launch()
        app.textFields["email"].tap()
        app.textFields["email"].typeText("email@test.com")
        app.textFields["password"].tap()
        app.textFields["password"].typeText("password")
        app.buttons["submit"].tap()
        
        // BACK BUTTON
        XCTAssert(app.navigationBars.buttons.element(boundBy: 0).exists)
    }
}
